<resources>
    <string name="app_name">JKK</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_in">sign_in</string>
    <string name="already_registered">Already Registered?</string>
    <string name="register">Register</string>
    <string name="full_name">full_name</string>
    <string name="picky_foody">Picky Foody</string>
    <string name="Register">Register</string>
    <string name="email_address">email_address</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="Sign_in">Sign_in</string>
    <string name="Email_address">email_address</string>
    <string name="Picky_foody">Picky Foody</string>
    <string name="Orders">Orders</string>
    <string name="favourite">favourite</string>
    <string name="history">history</string>
    <string name="History">History</string>
    <string name="HelpCenter">HelpCenter</string>
    <string name="Vouchers">Vouchers</string>
    <string name="Popup">Popup</string>
    <string name="Setting">Setting</string>
    <string name="Logout">Logout</string>
    <string name="MyCart">MyCart</string>
    <string name="menu_orders">orders</string>
    <string name="orders">orders</string>
    <string name="Favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vouchers_offers"><![CDATA[Vouchers & offers]]></string>
</resources>