<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/Orders" />
        <item
            android:id="@+id/nav_Favourite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_History"
            android:icon="@drawable/baseline_manage_history_24"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_HelpCenter"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/HelpCenter" />
        <item
            android:id="@+id/nav_Vouchers"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/Vouchers" />
        <item
            android:id="@+id/nav_MyCart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/MyCart" />
        <item
            android:id="@+id/nav_Popup"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/Popup" />
        <item
            android:id="@+id/nav_Setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/Setting" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/Logout" />

    </group>
</menu>