<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FD232222">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/logo1"
        android:layout_marginLeft="10dp"

        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"

        android:gravity="center"
        android:padding="10dp"
        android:layout_marginLeft="100dp"
        android:text="@string/Picky_foody"
        android:textColor="@color/white"
        android:textSize="30sp"



        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_gravity="center"
        android:padding="16dp"
        android:useDefaultMargins="true"
        android:layout_marginTop="70dp" >

        <!-- First CardView -->
        <androidx.cardview.widget.CardView

            android:id="@+id/cardView1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#8AF64444"
            app:cardCornerRadius="15dp"
            >

            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_upload_24"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:text="Upload/Delete Cuisines"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:onClick="upload"
                android:textSize="20dp"
                android:layout_gravity="center"


                />


            <!-- Content for CardView 1 -->
        </androidx.cardview.widget.CardView>

        <!-- Second CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#8AF64444"
            app:cardCornerRadius="15dp">
            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_folder_delete_24"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"

                android:onClick="itemdelete"
                android:layout_marginTop="20dp"
                android:text="Add Items"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"

                />

            <!-- Content for CardView 2 -->
        </androidx.cardview.widget.CardView>

        <!-- Third CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#8AF64444"

            app:cardCornerRadius="15dp">
            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_folder_delete_24"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="AllItem"
                android:text="Show/Delete Item"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="20dp"

                />

            <!-- Content for CardView 3 -->
        </androidx.cardview.widget.CardView>

        <!-- Fourth CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#8AF64444"
            app:cardCornerRadius="15dp">

            <!-- Content for CardView 4 -->
            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_alert_24"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Popup"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:onClick="POPUP"
                android:textSize="20dp"
                android:layout_gravity="center"

                />
        </androidx.cardview.widget.CardView>
        <!-- Fifth CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#8AF64444"
            app:cardCornerRadius="15dp">

            <!-- Content for CardView 5 -->
            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_menu_book_24"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Vouchers"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="20dp"
                android:layout_gravity="center"
                android:onClick="Vouchers"

                />
        </androidx.cardview.widget.CardView>

        <!-- Sixth CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView6"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#8AF64444"
            app:cardCornerRadius="15dp">

            <!-- Content for CardView 6 -->
            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_settings_24"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Setting"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:onClick="setting"
                android:textSize="20dp"
                android:layout_gravity="center"

                />
        </androidx.cardview.widget.CardView>

        <!-- Seventh CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView7"

            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#8AF64444"
            app:cardCornerRadius="15dp"
            >

            <!-- Content for CardView 7 -->
            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_cached_24"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="order History"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:onClick="Order History"
                android:textSize="20dp"
                android:layout_gravity="center"

                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView8"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#8AF64444"
            app:cardCornerRadius="15dp">

            <!-- Content for CardView 8 -->
            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_logout_24"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Logout"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:onClick="logout"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"


                />
        </androidx.cardview.widget.CardView>

    </GridLayout>
</RelativeLayout>
